--- a/T-shirt.html
+++ b/T-shirt.html
@@ -66,6 +66,9 @@
         </div>
         <div id="search-results"></div>
     </div>
+    <div class="img_hero">
+        <img src="T-shirt .jpg" height="470px"width="100%">
+    </div>
     <div class="mid-section2">
         <h1 style="margin-left: -2%;"> T-SHIRT  </h1>
 
