--- a/NewArrivals.html
+++ b/NewArrivals.html
@@ -76,7 +76,7 @@
         <a href="#"><p style="word-spacing: 5px; margin-left:30px;font-size:small"> <i class="fa-solid fa-xmark"></i> clear all  | <span style="color:grey"> <i class="fa-solid fa-xmark"></i> Avalabilty: In stock </span> </p></a>
     </div>
     <section class="new-arrivals">
-        <h1>New Arrivals</h1>
+        <h1 style="align-items: center;"> New Arrivals </h1>
         <div class="products"></div>
         <div class="loading-indicator">
             <img src="MnyxU.gif" alt="Loading...">
